--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,146 @@
-.App {
-  text-align: center;
-}
+  .App {
+    display: flex;
+    padding: 40px;
+    background-color: rgb(4, 28, 45);
+    min-height: calc(100vh - 80px);
+  }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+  #logo1 {
+    text-align: center;
+  }
 
-@media (prefers-reduced-motion: no-preference) {
+
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    height: 50px;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .choosediv{
+    /* justify-content: center; */
+    cursor: pointer;
+    height: 30px;
+    width: 300px;
+    line-height: 30px;
+    border: solid 1px rgb(61, 255, 13);
+    border-bottom: 0px solid;
+    overflow: hidden;
   }
-  to {
-    transform: rotate(360deg);
+
+  .choosediv:last-child {
+    border-bottom: solid 1px rgb(61, 255, 13);
   }
-}
+
+
+  .choosediv:hover{
+    color: red;
+  }
+
+  .textAdd{
+    justify-content: center;
+  }
+
+  .App-logo {
+    justify-content: center;
+  }
+
+  @media (prefers-reduced-motion: no-preference) {
+    .App-logo {
+      animation: App-logo-spin infinite 20s linear;
+    }
+  }
+
+  .App-header {
+
+    /* min-height: 100vh; */
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    font-size: calc(10px + 2vmin); */
+    color: rgb(255, 251, 251);
+    font-size: 16px;
+    width: 50%;
+  }
+
+
+  @keyframes App-logo-spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+
+  .contentLeft{
+    border-right: 1px gray solid;
+  }
+
+  .contentRight{
+    margin-left: 10px;
+    width: 50%;
+    color: white;
+  }
+
+  .input-product {
+    padding-left: 10px;
+    padding-right: 10px ;
+    padding-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    
+  }
+
+  .input-product input {
+    width: 60%;
+    height: 25px;
+    border: none;
+    border-radius: 3px;
+    outline: none;
+  }
+
+  .hideAndShow {
+    font-size: 13px;
+    color: rgb(27, 202, 202);
+    cursor: pointer;
+  }
+
+  
+  .addNewProductButt {
+    margin-left: 65px;
+    margin-bottom: 2px;
+    justify-content: center;
+    height: 30px;
+    width: 100px;
+    text-align: center;
+    line-height: 30px;
+    background-color: rgb(63, 234, 134);
+    border: 1px solid green;
+    border-radius: 2px;
+    cursor: pointer;
+  }
+  .addNewProductButt:hover {
+    background-color: rgb(187, 252, 90);
+    border: 1px solid rgb(255, 54, 9);
+    color: rgb(0, 61, 245);
+  }
+
+  .clearForm {
+    margin-left: 10px;
+    height: 30px;
+    width: 100px;
+    text-align: center;
+    line-height: 30px;
+    background-color: rgb(231, 110, 77);
+    border: 1px solid rgb(247, 139, 62);
+    border-radius: 2px;
+    cursor: pointer;
+  }
+
+  .clearForm:hover {
+    background-color: rgb(253, 55, 0);
+    border: 1px solid rgb(0, 255, 26);
+    color: white;
+  }
